Fix warning related with JavaFx at the start of the application