@@ -66,6 +66,9 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>com.franciscoguemes.sudoku.gui.GameApp</mainClass>
+          <options>
+            <option>--enable-native-access=javafx.graphics</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
